# square-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/square_cli/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  output.py
src/square_cli/commands/: auth_cmd.py  catalog.py  config_cmd.py  customers.py  disputes.py  gift_cards.py  http.py  inventory.py  invoices.py  labor.py  locations.py  loyalty.py  orders.py  payments.py  refunds.py  sales.py  subscriptions.py  team.py  utility.py  vendors.py  webhooks.py
tests/: conftest.py
